@@ -76,7 +76,13 @@ div.imlinks_socbookmark a:hover img
               <div> 
                 <div align="center"><a href="<{$xoops_url}>/<{$shots_dir}>/<{$link.screenshot_full}>" target="_blank"><img src="<{$link.screenshot_thumb}>" alt="" vspace="3" hspace="7" align="middle" /></a></div>
             </div> <{/if}><{/if}><{/if}>
-              <{if $link.autoscrshot == 1}> <div align="center"> <a href="<{$xoops_url}>/modules/<{$link.module_dir}>/visit.php?cid=<{$link.cid}>&lid=<{$link.id}>" target="_blank"><img src="http://mozshot.nemui.org/shot/200x200?<{$link.url}>" align="middle" alt="" /></a> </div> <{/if}>	  </td>
+              <{if $link.autoscrshot == 1}> <div align="center">
+  <{if $link.autothumbsrc == 0}>
+	<a href="<{$xoops_url}>/modules/<{$link.module_dir}>/visit.php?cid=<{$link.cid}>&lid=<{$link.id}>" target="_blank"><img src="http://open.thumbshots.org/image.pxf?url=<{$link.url}>" width="120" height="90" align="middle" alt="" /></a>
+  <{else}>
+	<a href="<{$xoops_url}>/modules/<{$link.module_dir}>/visit.php?cid=<{$link.cid}>&lid=<{$link.id}>" target="_blank"><img src="http://mozshot.nemui.org/shot/200x200?<{$link.url}>" align="middle" alt=""/></a>
+  <{/if}>
+ </div> <{/if}>	  </td>
         </tr> 
         <tr> 
          <td colspan="2" valign="top"></td>
